# AuditPatch

./: .gitmodules  README.md  build.gradle.kts
.github/workflows/: build.yml
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  hook.c
module/template/: customize.sh  module.prop  post-fs-data.sh
